# gpt-scroller

./: .gitignore  CMakeLists.txt  EXPLOSIONS.md  LICENSE  README.md  index.html  llm.md  package-lock.json  package.json  tsconfig.json
src/: CMakeLists.txt  asciiz.js  build.sh  demo.cpp  demo.js  ffi_helpers.c  ffi_helpers.h  ffi_helpers.js  game.ts  gen_js_externs.sh  js_externs.c  js_externs.js  js_externs_cwrap.c  nbody.js  scroller.cpp  shaders.glsl  shaders.h  sokol.m
src/ffigen/: ffigen.py
src/sokol/: CMakeLists.txt  sokol.c
tools/: ffigen.py
